--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,7 @@ margin-top: 70px;
   text-align: right;
   line-height: 2em;
   margin: auto;
+  padding-bottom: 20px;
 }
 
 .profile {
@@ -154,6 +155,22 @@ margin-top: 70px;
  display: inline-block; margin-top: 30px;
  padding: 10px;
  color: #11999E;
+}
+
+.PWE {
+padding-left: 180px;
+padding-right: 180px;
+text-align: left;
+}
+
+.QRCODE {
+width: 150px;
+padding: 20PX;
+}
+
+.QRCODE:hover
+{
+  background: #30e3cb;
 }
 /****************************images****************************************/
 .avatar {
